load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/regex/*.hpp",
    "include/boost/regex/config/*.hpp",
    "include/boost/regex/pending/*.hpp",
    "include/boost/regex/v4/*.hpp",
]

cc_library(
    name = "regex_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "regex",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":regex_internal",
        "@boost//iterator",
    ],
)
